# ca-tharsis

./: LICENSE.txt  README.md  azure_watchlist_maintainer_role.json  ca.py  common_apps.py  disjoint_sets.py  groups.py  licenses.py  main.py  pyproject.toml  reporting.py  requirements.txt  requirements_dev.txt  requirements_solver.txt  settings.py  setup.py  solver.py  test_disjoint_sets.py  utils.py  utils_graphapi.py
catharsis/: azcli_query.py  ca.py  cached_get.py  graph_query.py  licenses.py  ms_credential.py  reporting.py  run.py  settings.py  solver.py  task_ca_report.py  task_list_admins.py  task_solver.py  typedefs.py  utils.py  utils_graphapi.py
catharsis/azure/: azure_fetcher.py  azure_graph_queries.py  azure_resource_graph_queries.py  typedefs.py  watchlist.py
static/: app.js  style.css
tests/: test_disjoint_sets.py  test_serialization.py
